--- a/project.html
+++ b/project.html
@@ -77,7 +77,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-1.jpg);">
             	<a href="work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -90,7 +90,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(hos.jpg);">
             	<a href="hos.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -103,7 +103,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-3.jpeg);">
             	<a href="work-3.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -117,7 +117,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-4.jpeg);">
             	<a href="work-4.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -130,7 +130,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-5.jpeg);">
             	<a href="work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -142,7 +142,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-6.jpeg);">
             	<a href="work-6.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -155,7 +155,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-7.jpeg);">
             	<a href="work-7.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -167,7 +167,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-8.jpeg);">
             	<a href="work-8.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -179,7 +179,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-9.jpg);">
             	<a href="work-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -191,7 +191,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-10.jpeg);">
             	<a href="work-10.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -203,7 +203,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-11.jpeg);">
             	<a href="work-11.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -215,7 +215,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-12.jpeg);">
             	<a href="work-12.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -227,7 +227,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-13.jpeg);">
             	<a href="work-13.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -239,7 +239,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(mandir.jpg);">
             	<a href="mandir.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -251,7 +251,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-14.jpeg);">
             	<a href="work-14.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -263,7 +263,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_20171108_150310.jpg);">
             	<a href="IMG_20171108_150310.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -275,7 +275,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_20170603_161737.jpg);">
             	<a href="IMG_20170603_161737.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -287,7 +287,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG-20170214-WA0004.jpg);">
             	<a href="IMG-20170214-WA0004.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -299,7 +299,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_20171025_164557_HDR.jpg);">
             	<a href="IMG_20171025_164557_HDR.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -311,7 +311,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20150909_120545-01.jpeg);">
             	<a href="20150909_120545-01.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -323,7 +323,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_20171108_150838_HDR.jpg);">
             	<a href="IMG_20171108_150838_HDR.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -335,7 +335,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_20181009_153607-01.jpeg);">
             	<a href="IMG_20181009_153607-01.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -347,7 +347,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_0864.jpg);">
             	<a href="IMG_0864.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -359,7 +359,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20160912_131701-01.jpeg);">
             	<a href="20160912_131701-01.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -371,7 +371,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20160912_131049-01.jpeg);">
             	<a href="20160912_131049-01.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -383,7 +383,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20160912_131040.jpg);">
             	<a href="20160912_131040.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -395,7 +395,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(IMG_20181009_153819.jpg);">
             	<a href="IMG_20181009_153819.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -407,7 +407,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20170122_130723-01.jpeg);">
             	<a href="20170122_130723-01.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -419,7 +419,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20190812_115840.jpg);">
             	<a href="20190812_115840.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
@@ -431,7 +431,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(20190923_181927.jpg);">
             	<a href="20190923_181927.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
