--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(work-5.jpeg);">
             	<a href="work-5.jpeg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
+	    					<span class="fas fa-expand-alt"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
