--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i class="ion-ios-arrow-forward"></i></span></p>
+          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="fas fa-angle-right"></i></a></span> <span>Contact <i class="fas fa-angle-right"></i></span></p>
             <h1 class="mb-0 bread">Contact us</h1>
           </div>
         </div>
