--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
           <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
             <div class="media block-6 d-block text-center pt-md-4">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-hook"></span>
+            		<span class="flaticon-hook" style="font-family: Flaticon;
+    font-size: 60px;
+    font-style: normal;
+    margin-left: 0px;"></span>
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Construction</h3>
