--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="project.html" class="nav-link">Project</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	        	<li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+	        	<li class="nav-item"><a href="project.html" class="nav-link">Our Projects</a></li>
+	                <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -64,7 +64,7 @@
 		          <div class="col-md-12 ftco-animate">
 		          	<div class="text w-100 text-center">
 		          		<h2>We're here to help you</h2>
-			            <h1 class="mb-3">RAJ ENGINEERS</h1>
+			            	<h1 class="mb-3">RAJ ENGINEERS</h1>
 		            </div>
 		          </div>
 		        </div>
@@ -78,7 +78,7 @@
 		          <div class="col-md-12 ftco-animate">
 		          	<div class="text w-100 text-center">
 		          		<h2>Dedicated to provide</h2>
-			            <h1 class="mb-3">Highest Quality Services</h1>
+			            	<h1 class="mb-3">Highest Quality Services</h1>
 		            </div>
 		          </div>
 		        </div>
@@ -92,7 +92,7 @@
 		          <div class="col-md-12 ftco-animate">
 		          	<div class="text w-100 text-center">
 		          		<h2>We Build your home</h2>
-			            <h1 class="mb-3">Secure & Safe</h1>
+			            	<h1 class="mb-3">Secure & Safe</h1>
 		            </div>
 		          </div>
 		        </div>
@@ -108,7 +108,7 @@
             <div class="media block-6 d-block text-center pt-md-4">
               <div class="icon d-flex justify-content-center align-items-center">
             		<span class="flaticon-hook" style="font-family: Flaticon;
-    font-size: 60px;
+	<!-- font size should never be 60px -->
     font-style: normal;
     margin-left: 0px;"></span>
               </div>
@@ -397,6 +397,10 @@
 					</div
 				</div>
 			</div>
+		
+		<div>
+			<p> MADE WITH ♥ BY SNEHIL JAIN </p>
+				</div>
 		</footer>
 
 
@@ -404,6 +408,7 @@
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
+<!-- Scripts -->
 
   <script src="jquery.min.js"></script>
   <script src="jquery-migrate-3.0.1.min.js"></script>
