--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
 	    				<div class="text">
 	      				<h3>Expert &amp; Professional</h3>
 	      				<p class="mb-0">Consultant, Architect and Engineer </p>
+						<p class="mb-0">I am here to help you <strong> raj</strong> </p>
+				
 	    				</div>
 	    			</div>
     			</div>
