--- a/index.html
+++ b/index.html
@@ -106,6 +106,41 @@
     		<div class="row">
           <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
             <div class="media block-6 d-block text-center pt-md-4">
+		    <div class="icon d-flex justify-content-center align-items-center">
+            		<span class="flaticon-hook" style="font-family: Flaticon;
+	<!-- font size should never be 60px -->
+    font-style: normal;
+    margin-left: 0px;"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading">Construction</h3>
+                <p>We take all type of building projects like commerical, residencial and institutional. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
+            <div class="media block-6 d-block text-center pt-md-4">
+              <div class="icon d-flex justify-content-center align-items-center">
+            		<span class="flaticon-skyline"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading">With Material Contract</h3>
+                <p>We provide all services i.e from plan-approval to the inaugration of the project.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
+            <div class="media block-6 d-block text-center pt-md-4">
+              <div class="icon d-flex justify-content-center align-items-center">
+            		<span class="flaticon-home"></span>
+              </div>
+              <div class="media-body p-2 mt-3">
+                <h3 class="heading">Architecture Design</h3>
+                <p>We provide all types of planning, 3D design and structural work for the building.</p>
+              </div>
+            </div>
+          </div>
+        </div>
               
     		<div class="row no-gutters">
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
