--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     	<div class="container">
     		
               
-    		<div class="row no-gutters">
+    		<div class="row no-gutters" style="margin-top: 20px;">
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
