--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
-	    					<span class="flaticon-engineer"></span>
+	    					<span class="flaticon-engineer" style="font-size: 2.4rem;"></span>
 	    				</div>
 	    				<div class="text">
-	      				<h3>Expert &amp; With-Material Contract</h3>
+	      				<h3>With-Material Contract</h3>
 	      				<p class="mb-0">We provide all services i.e from plan-approval to the inaugration of the project. </p>
 						
 	
@@ -122,10 +122,10 @@
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
-	    					<span class="flaticon-engineer-1"></span>
+	    					<span class="flaticon-engineer-1" style="font-size: 2.4rem;"></span>
 	    				</div>
 	    				<div class="text">
-	      				<h3>Construction</h3>
+	      				<h3>Experts in Construction</h3>
 	      				<p class="mb-0">We take all type of building projects like commerical, residencial and institutional. </p>
 	      			</div>
 	      		</div>
@@ -133,7 +133,7 @@
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
-	    					<span class="flaticon-engineer-2"></span>
+	    					<span class="flaticon-engineer-2" style="font-size: 2.4rem;"></span>
 	    				</div>
 	    				<div class="text">
 	      				<h3>Architecture Design</h3>
