--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <section class="ftco-section">
+    <section class="ftco-section" style="padding-top: 0px;padding-bottom: 20px;">
     	<div class="container">
     		<div class="row justify-content-center">
 					<div class="col-md-12">
@@ -144,6 +144,7 @@
               <div class="col-md-6 mb-md-0 mb-6">
                 <h2 class="footer-heading">Contact us</h2>
                 <p>+91 9414290236</p>
+		<p>+91 8949224810</p>
                 
               </div>
               <div class="col-md-6 mb-md-0 mb-6">
