--- a/contact.html
+++ b/contact.html
@@ -74,13 +74,8 @@
     		<div class="row justify-content-center">
 					<div class="col-md-12">
 						<div class="wrapper">
-							<div class="row no-gutters mb-5">
-								<div class="col-md-5 d-flex align-items-stretch">
-									<div id="map">
-				          </div>
-								</div>
-							</div>
-							<div class="row">
+							
+							<div class="row" style="margin-top: 3rem;">
 								<div class="col-md-3">
 									<div class="dbox w-100 text-center">
 				        		<div class="icon d-flex align-items-center justify-content-center">
