--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 				</div>
 			</div>
 		
-		<div>
+		<div style="text-align: center;">
 			<p> MADE WITH ♥ BY SNEHIL JAIN </p>
 				</div>
 		</footer>
