--- a/about.html
+++ b/about.html
@@ -288,6 +288,9 @@
 					</div
 				</div>
 			</div>
+				<div style="text-align: center;">
+			<p> MADE WITH ♥ BY SNEHIL JAIN </p>
+				</div>
 		</footer>
 
 
