--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
 	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="project.html" class="nav-link">Project</a></li>
+			<li class="nav-item"><a href="hey.html" class="navigation-link">hey</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
