added two new sections

--- a/index.html
+++ b/index.html
@@ -136,7 +136,17 @@
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Architecture Design</h3>
-                <p>We provide all types of planning, 3D design and structural work for the building.</p>
+                <p><i>We provide all types of planning, 3D design and structural work for the building.</i></p>
+              </div>
+		    
+		<div class="media-body p-2 mt-3">
+			<h3 class="heading"><b>Architecture Planning</b></h3>
+                <p><i>We provide all types of Architecture Planning.</i></p>
+              </div>
+		    
+		<div class="media-body p-2 mt-3">
+                <h3 class="heading">Execution/Implementation</h3>
+                <p><i>We do execution of the planned projects in least time possible.</i></p>
               </div>
             </div>
           </div>
