--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	          <div class="row no-gutters slider-text align-items-center justify-content-center">
 		          <div class="col-md-12 ftco-animate">
 		          	<div class="text w-100 text-center">
-		          		<h2>We're here to help you</h2>
+		          		<h2>Designing Dreams, Building Reality!</h2>
 			            	<h1 class="mb-3">RAJ ENGINEERS</h1>
 		            </div>
 		          </div>
@@ -365,9 +365,6 @@
 				</div>
 			</div>
 		
-		<div style="text-align: center;">
-			<p> MADE WITH ♥ BY SNEHIL JAIN </p>
-				</div>
 		</footer>
 
 
